# illusion-MW-triage

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
docs/: osquery_template.sql  sigma_template.yml  velociraptor_template.yml
hunt_reports/1780931173033/: hunt_report.json
hunt_reports/1780931268320/: hunt_report.json
hunt_reports/1780934126820/: hunt_report.json
hunt_reports/1780934225373/: hunt_report.json
hunt_reports/1780934342415/: hunt_report.json
hunt_reports/1780934537595/: hunt_report.json
hunt_reports/1780934629701/: hunt_report.json
hunt_reports/1780934769712/: hunt_report.json
hunt_reports/1780934904410/: hunt_report.json
hunt_reports/1780936002138/: hunt_report.json
hunt_reports/1780936143141/: hunt_report.json
hunt_reports/1780936335800/: hunt_report.json
hunt_reports/1780936421594/: hunt_report.json
hunt_reports/1780936515981/: hunt_report.json
hunt_reports/1780936607861/: hunt_report.json
hunt_reports/1780936698356/: hunt_report.json
hunt_reports/1780972631346/: hunt_report.json
hunt_reports/1780973719280/: hunt_report.json
keys/: illusion_repo.pub
release/: README-WINDOWS.txt  illusion_sandbox-linux
scripts/: package_release.sh  remove_double_slash_comments.py
src/: detection.rs  dumper.rs  elf.rs  hash.rs  hunt.rs  impersonation.rs  impersonation_confusables_gen.rs  lib.rs  main.rs  monitor.rs  packers.rs  pe.rs  quarantine.rs  report.rs  sandbox.rs  whitelist.rs  yara_wrapper.rs
src/platform/: linux.rs  mod.rs  (+1 more)
tests/: integration_dynamic.rs  integration_masquerade.rs
yara/: packer_yara.yar
(+1 files in other folders)
