[package]
name = "illusion_sandbox"
version = "0.2.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
goblin = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
thiserror = "1.0"
nix = "0.26"
strsim = "0.10"
unicode-normalization = "0.1"
clap = { version = "4.3", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
yara = { version = "0.8", optional = true }
windows-sys = { version = "0.61", optional = true, features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Diagnostics_Debug", "Win32_System_ProcessStatus", "Win32_System_Memory"] }

[dev-dependencies]
tempfile = "3.3"

[features]

default = []



yara = ["dep:yara"]

windows-backend = ["dep:windows-sys"]
